create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1767,6 +1767,31 @@ body {
   padding-top: 90px;
   padding-bottom: 30px;
 }
+.cid-rj8zGCW3lZ {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-rj8zGCW3lZ h3 {
+  text-align: center;
+}
+.cid-rj8zGCW3lZ .mbr-section-subtitle {
+  color: #767676;
+  font-weight: 300;
+}
+.cid-rj8zGCW3lZ .mbr-content-text {
+  color: #767676;
+}
+.cid-rj8zGCW3lZ .panel-item {
+  background: #ffffff;
+}
+.cid-rj8zGCW3lZ .card {
+  word-wrap: break-word;
+}
+.cid-rj8zGCW3lZ .mbr-iconfont {
+  font-size: 80px;
+  color: #149dcc;
+}
 .cid-rj8xPPLjyc {
   padding-top: 90px;
   padding-bottom: 90px;
